force-app/main/default/objects/Game_Round__c/Game_Round__c.object-meta.xml
<CustomObject>
    <description>One question round inside a session.</description>
    <label>Game Round</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Game Round Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Rounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>