force-app/main/default/objects/Game_Round__c/fields/Correct_Answer_Revealed__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer_Revealed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correct Answer Revealed</label>
    <type>Checkbox</type>
</CustomField>