force-app/main/default/objects/Game_Round__c/fields/Ended_At__c.field-meta.xml
<CustomField>
    <fullName>Ended_At__c</fullName>
    <label>Ended At</label>
    <type>DateTime</type>
</CustomField>