force-app/main/default/objects/Game_Round__c/fields/Trivia_Question__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Question__c</fullName>
    <label>Trivia Question</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Trivia_Question__c</referenceTo>
    <relationshipName>Rounds</relationshipName>
    <relationshipLabel>Trivia Question</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>